// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeField should render a loading state 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="Does your index have time series data? Select the field to use as the main time filter."
        id="kbn.management.createIndexPattern.stepTime.timeDescription"
        values={Object {}}
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <FormattedMessage
        defaultMessage="No time series data? No problem. Select 'I don't want to use a time filter'."
        id="kbn.management.createIndexPattern.stepTime.fieldHelpText"
        values={Object {}}
      />
    }
    label={
      <FormattedMessage
        defaultMessage="Time field"
        id="kbn.management.createIndexPattern.stepTime.fieldLabel"
        values={Object {}}
      />
    }
    labelAppend={
      <EuiLoadingSpinner
        size="s"
      />
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={true}
      name="timeField"
      options={
        Array [
          Object {
            "text": "Loading…",
            "value": "",
          },
        ]
      }
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render a selected time field 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="Does your index have time series data? Select the field to use as the main time filter."
        id="kbn.management.createIndexPattern.stepTime.timeDescription"
        values={Object {}}
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <FormattedMessage
        defaultMessage="No time series data? No problem. Select 'I don't want to use a time filter'."
        id="kbn.management.createIndexPattern.stepTime.fieldHelpText"
        values={Object {}}
      />
    }
    label={
      <FormattedMessage
        defaultMessage="Time field"
        id="kbn.management.createIndexPattern.stepTime.fieldLabel"
        values={Object {}}
      />
    }
    labelAppend={
      <EuiText
        size="xs"
      >
        <ForwardRef
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Refresh"
            id="kbn.management.createIndexPattern.stepTime.refreshButton"
            values={Object {}}
          />
        </ForwardRef>
      </EuiText>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value="@timestamp"
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render normally 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="Does your index have time series data? Select the field to use as the main time filter."
        id="kbn.management.createIndexPattern.stepTime.timeDescription"
        values={Object {}}
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <FormattedMessage
        defaultMessage="No time series data? No problem. Select 'I don't want to use a time filter'."
        id="kbn.management.createIndexPattern.stepTime.fieldHelpText"
        values={Object {}}
      />
    }
    label={
      <FormattedMessage
        defaultMessage="Time field"
        id="kbn.management.createIndexPattern.stepTime.fieldLabel"
        values={Object {}}
      />
    }
    labelAppend={
      <EuiText
        size="xs"
      >
        <ForwardRef
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Refresh"
            id="kbn.management.createIndexPattern.stepTime.refreshButton"
            values={Object {}}
          />
        </ForwardRef>
      </EuiText>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render something if hiding time field 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="The indices which match this index pattern don't contain any time fields."
        id="kbn.management.createIndexPattern.stepTime.field.noTimeFieldsLabel"
        values={Object {}}
      />
    </p>
  </EuiText>
</EuiForm>
`;
